src/app/components/game-board/game-board.component.scss
.game-board-container {
  --viewport-padding: 32px;
  display: grid;
  justify-content: center;
  grid-template-columns:
    1fr min(25rem, calc(100% - var(--viewport-padding) * 2))
    1fr;
  grid-template-areas:
    ". header ."
    ". content ."
    ". scoring .";
  padding: var(--viewport-padding);
}

.game-nav-container {
  grid-area: header;
  display: flex;
  justify-content: space-between;

  a {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0.5rem 1rem;
    font-size: 1.5rem;
    border: 2px solid black;
    border-radius: 0.5rem;
    cursor: pointer;
    transition: background-color 0.1s;
    margin-bottom: 2rem;
    background-color: lightblue;
    width: 5rem;
  }
}

@keyframes fadeIn {
  from {
    top: 20%;
    opacity: 0;
  }
  to {
    top: 100;
    opacity: 1;
  }
}

.coming-soon-disabled {
  opacity: 0.1;
  pointer-events: none;
}

.processing-move {
  pointer-events: none;
}

.coming-soon {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  animation: fadeIn 1000ms ease;

  h1 {
    font-size: 50px;
    margin-bottom: 0;
    line-height: 1;
    font-weight: 500;
  }
}

.game-board-content {
  justify-self: center;
  width: 100%;
  aspect-ratio: 1 / 1;
  position: relative;
  grid-area: content;
}

.game-board-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);
  width: 100%;
  height: 100%;
}

.game-board-square {
  border-right: 4px solid black;
  border-bottom: 4px solid black;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 6rem;
  transition: background-color 0.1s;
  cursor: pointer;
}

.game-board-square:nth-of-type(3n + 3) {
  border-right: 0;
}

.game-board-square:nth-of-type(n + 7) {
  border-bottom: 0;
}

@media (max-width: 480px) {
  .game-board-square {
    font-size: 4rem;
  }
}

@media (max-width: 750px) {
  .game-board-content {
    width: 100%;
    max-width: 400px;
  }
}

.scoring-container {
  grid-area: scoring;
}

.scoring-content {
  display: flex;
  justify-content: space-evenly;
  margin-top: 2rem;
}

.draw > div {
  animation: blink 0.3s steps(1) 3;
  animation-delay: 0.6s;
}

.strike-through {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 2;
  pointer-events: none;
  overflow: visible;

  line {
    stroke: #000;
    stroke-width: 6px;
    stroke-linecap: round;
    stroke-dasharray: 425;
    stroke-dashoffset: 425;
    animation: drawStrike 0.3s ease-out forwards;
    animation-delay: 0.6s;
  }

  &.row {
    transform: translateY(-3px);
  }

  &.column {
    transform: translateX(-3px);
  }

  &.diagonal,
  &.antiDiagonal {
    transform: translate(-3px, -3px);
  }
}

@keyframes drawStrike {
  to {
    stroke-dashoffset: 0;
  }
}

